<resources>

    <string name="app_name">DMX Soundboard</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_exit">Exit</string>
    <string name="title_activity_splash_screen">DMX Soundboard</string>
    <string name="title_activity_soundboard">DMX Soundboard</string>
    <string name="all_up_dog">All Up Dog</string>
    <string name="yeah">Yeah!</string>
    <string name="what_we_do_baby">What we do baby</string>
    <string name="throw_it_up">Throw It Up</string>
    <string name="the_streets">Streets</string>
    <string name="stop_talking_quick">Stop talking quick</string>
    <string name="ruff_ryders">RUFF RYDERS!</string>
    <string name="ride_or_die">Ride Or Die!</string>
    <string name="not_a_game">Not a game</string>
    <string name="d_m_x">D-M-X!</string>
    <string name="dog">Dog.</string>
    <string name="here_we_go_again">Here we go!</string>
    <string name="hey_yo">Hey yo!</string>
    <string name="mmm">Mmm...</string>
    <string name="crying">Crying</string>
    <string name="kids_career">Kids &amp; Career</string>
    <string name="mommy">Mommy!</string>
    <string name="rudolph">DMX sings Rudolph the Red-Nosed Reindeer</string>
    <string name="menu_settings">Settings</string>

</resources>